# balena-homekit

./: .gitignore  Cargo.toml  Dockerfile.template  README.md  docker-compose.yml
accessories/: Cargo.toml  Dockerfile.template  docker-compose.yml
accessories/src/: main.rs
controller/: docker-compose.yml
src/: lib.rs  main.rs
src/sensors/: aht20.rs  mod.rs  sgp30.rs
