[package]
name = "client"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2"
linux-embedded-hal = "0.3"
sgp30 = "0.3"
aht20 = "0.1"

anyhow = "1.0"
tokio = { version = "0.2", features = ["full", "macros"] }
async-channel = "1.4"
rumqttc = { git = "https://github.com/bytebeamio/rumqtt" }
influxdb = { version = "0.1", features = ["derive"] }
chrono = "0.4"

log = "0.4"
pretty_env_logger = "0.4"
color-backtrace = "0.4"

openssl = { version = "0.10", features = ["vendored"] }
